# careerai

./: .env  .gitignore  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  README.md  pyproject.toml
backend/careerai/careerai/: asgi.py  models.py  settings.py  urls.py  wsgi.py
careerai/: db.sqlite3  manage.py
careerai/alumni/: models.py
careerai/alumni/api/: serializers.py  urls.py  views.py
careerai/careerai/: celery.py  settings.py  tasks.py  urls.py
careerai/course/: models.py  serializers.py  urls.py  views.py
careerai/course/api/: serializers.py  urls.py  views.py
careerai/course/services/: course_apis.py
careerai/job_search/: apps.py  models.py
careerai/job_search/api/: serializers.py  urls.py  views.py
careerai/job_search/services/: job_apis.py
careerai/learning/: models.py
careerai/learning/api/: serializers.py  urls.py  views.py
careerai/user_registration/: __init__.py  admin.py  apps.py  models.py  signals.py
careerai/user_registration/api/: permissions.py  serializers.py  urls.py  views.py
careerai/user_registration/management/commands/: populate_data.py
frontend/: codecopy.py  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  config.js
frontend/src/components/common/: AlumniCard.css  AlumniCard.js  CourseCard.css  CourseCard.js  JobCard.css  JobCard.js
frontend/src/components/dashboard/: RecommendedCourses.js  RecommendedJobs.css  RecommendedJobs.js
frontend/src/components/helpers/: ProfileDebugHelper.js
frontend/src/components/layout/: Footer.css  Footer.js  Navbar.css  Navbar.js
frontend/src/contexts/: AuthContext.js
frontend/src/pages/: Home.css  Home.js  NotFound.js
frontend/src/pages/alumni/: Alumni.css  AlumniDirectory.js  AlumniEvents.js  EventDetail.js  MentorSearch.js  MentorshipDashboard.css  MentorshipDashboard.js
frontend/src/services/: alumniService.js  courseService.js  jobService.js  learningService.js  locationService.js  profileService.js
frontend/src/utils/: imageUtils.js
(+25 files in other folders)
