[tool.poetry]
name = "careerai"
version = "0.1.0"
description = ""
authors = ["Sejal Parate <sejbp3003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = ">=5.1.7,<6.0.0"
djangorestframework = ">=3.15.2,<4.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
djangorestframework-simplejwt = ">=5.5.0,<6.0.0"
django-cors-headers = "^4.7.0"
drf-nested-routers = "^0.94.1"
django-filter = "^25.1"
pillow = "^11.1.0"
requests = "^2.32.3"
celery = "^5.3.6"
redis = "^5.0.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"